--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -4,10 +4,14 @@
 .top-50 { top: 50% }
 .link:hover { background: url(/images/line.png) repeat-x left bottom; }
 
+.reded{
+  color: #834f4f;
+}
 /* Markdown styles */
 .markdown-body a {
   text-decoration: none;
   color: #357edd;
+  color: #834f4f;
 }
 .markdown-body .highlighter-rouge {
   padding: .25rem .5rem;
