--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -11,7 +11,7 @@
 .markdown-body a {
   text-decoration: none;
   color: #357edd;
-  color: #834f4f;
+  color: #333;
 }
 .markdown-body .highlighter-rouge {
   padding: .25rem .5rem;
