--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,5 @@
 <link href='{{ site.url }}/images/aleph-white.jpg' rel='shortcut icon'>
+<link href='{{ site.url }}/vendors/skin-switch/skin-switch.css' rel='stylesheet' type='text/css' />
 <link href='{{ site.url }}/stylesheets/style.css' rel='stylesheet' type='text/css' />
 <link href='{{ site.url }}/stylesheets/syntax.css' rel='stylesheet' type='text/css' />
 
