--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,10 @@
         <img src="{{ site.url }}/images/aleph.png" alt="Home" width="53" height="59">
       </a>
       <p>{{ site.title }}</p>
+       <div id="change-skin" title="Toggle Night Mode">
+         <span class="skin-btn dark-mode">🌙</span>
+         <span class="skin-btn light-mode">☀️</span>
+       </div>
     </header>
     <div class="mw7 bg-white mt4 mb3 center br2-ns bt bb ba-ns b--light-gray">
       <nav class="bb b--light-gray pv4 tc" aria-label="Main">
