--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,4 +41,4 @@
 {% endif %}
 
 <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
-<script type="text/javascript" src="skin-switch.js"></script>
+<script type="text/javascript" src="vendors/skin-switch/skin-switch.js"></script>
