--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,8 @@
         {% endfor %}
       </nav>
 
+    {% include tagcloud.html %}
+      
       <main class="tl f6 relative pa4 pa5-ns overflow-hidden">
         {% if page.title %}
           <div class="mb4">
